// Enums
Enum class_status {
  active
  inactive
  archived
}

Enum enrollment_status {
  ongoing
  completed
  dropped
}

Enum role {
  student
  teacher
  admin
}

// Academic Tables
Table departments {
  id integer [pk, increment, note: "generatedAlwaysAsIdentity"]
  code varchar(50) [not null, unique]
  name varchar(255) [not null]
  description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table subjects {
  id integer [pk, increment, note: "generatedAlwaysAsIdentity"]
  department_id integer [not null]
  name varchar(255) [not null]
  code varchar(50) [not null, unique]
  description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table classes {
  id integer [pk, increment, note: "generatedAlwaysAsIdentity"]
  subject_id integer [not null]
  teacher_id text [not null]
  invite_code varchar(50) [not null, unique]
  name varchar(255) [not null]
  banner_cld_pub_id text
  banner_url text
  capacity integer [not null, default: 50]
  description text
  status class_status [not null, default: 'active']
  schedules jsonb [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table enrollments {
  id integer [pk, increment, note: "generatedAlwaysAsIdentity"]
  student_id text [not null]
  class_id integer [not null]
  grade integer
  status enrollment_status [not null, default: 'ongoing']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table materials {
  id integer [pk, increment, note: "generatedAlwaysAsIdentity"]
  class_id integer [not null]
  title varchar(255) [not null]
  url text [not null]
  type varchar(50) [not null, default: 'pdf']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// Auth Tables
Table user {
  id text [pk]
  name text [not null]
  email text [not null]
  email_verified boolean [not null]
  image text
  role role [not null, default: 'student']
  image_cld_pub_id text
  department_id integer
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table session {
  id text [pk]
  user_id text [not null]
  token text [not null, unique]
  expires_at timestamp [not null]
  ip_address text
  user_agent text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table account {
  id text [pk]
  user_id text [not null]
  account_id text [not null]
  provider_id text [not null]
  access_token text
  refresh_token text
  access_token_expires_at timestamp
  refresh_token_expires_at timestamp
  scope text
  id_token text
  password text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// Relationships
Ref: subjects.department_id > departments.id [delete: restrict]
Ref: classes.subject_id > subjects.id [delete: cascade]
Ref: classes.teacher_id > user.id [delete: restrict]
Ref: enrollments.student_id > user.id [delete: cascade]
Ref: enrollments.class_id > classes.id [delete: cascade]
Ref: materials.class_id > classes.id [delete: cascade]
Ref: user.department_id > departments.id [delete: set null]
Ref: session.user_id > user.id
Ref: account.user_id > user.id
